# rust-api-starter

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
migrations/2024-05-05-145239_initial_fruits/: down.sql  up.sql
src/: main.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: fruits.rs  mod.rs
tests/: fruits_integration_test.rs
tests/common/: mod.rs
