[package]
name = "rust-fruit-store"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116" }
chrono = { version = "0.4.38", features = ["serde"] }


[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
